[package]
name = "llm_chat"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = "4.5.42"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
